--- a/package.json
+++ b/package.json
@@ -7,13 +7,23 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "watch" : "npm-watch"
+  },
+  "watch": {
+      "build": {
+        "patterns": [
+          "usercode"
+        ],
+        "quiet": false
+      }
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "expo": "~44.0.0",
+    "expo-cli":"5.3.0",
     "expo-status-bar": "~1.2.0",
     "native-base": "^3.2.2",
     "react": "17.0.1",
@@ -23,7 +33,8 @@
     "react-native-screens": "~3.10.1",
     "react-native-svg": "^12.1.1",
     "react-native-web": "0.17.1",
-    "shortid": "^2.2.16"
+    "shortid": "^2.2.16",
+    "npm-watch" : "0.7.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
